2006-10-01 [colin]	2.5.2cvs31

	* src/msgcache.c
		Don't ftruncate when not using mmap

2006-09-30 [colin]	2.5.2cvs30

	* src/main.c
		Write folder list *after* saving caches

2006-09-30 [colin]	2.5.2cvs29

	* src/folder.c
	* src/mh.c
		Debug forced mtime changes

2006-09-30 [colin]	2.5.2cvs28

	* src/folder.c
	* src/main.c
		Remove useless debug_print()s (code
		well-tested)

2006-09-30 [colin]	2.5.2cvs27

	* src/mh.c
		Do stuff faster when writing mh_sequences

2006-09-30 [colin]	2.5.2cvs26

	* src/mh.c
		Don't let the writing of .mh_sequences, which
		can change the folder's mtime, let us think
		we need to scan.

2006-09-30 [colin]	2.5.2cvs25

	* src/folder.c
		Move a debug_print where it belongs 
		(processing)
	* src/summaryview.c
		Don't mess with a huge slow subject
		table if we're not threading by
		subject

2006-09-30 [colin]	2.5.2cvs24

	* src/msgcache.c
		Reenable mmaped reads (*not* writes!)
	* src/procmsg.c
		Don't destroy and recreate hashtables just
		for fun
	* src/common/utils.c
		Remove useless reply prefixes (it's case
		unsensitive)

2006-09-30 [wwp]	2.5.2cvs23

	* tools/fix_date.sh
		Fixed a minor bug in date value extraction, added a switch
		to replace non RFC-compliant Date: value, added a switch
		to use strict RFC matching patterns for dates.

2006-09-29 [colin]	2.5.2cvs22

	* src/matcher_parser.h
	* src/matcher_parser_parse.y
	* src/prefs_filtering.c
	* src/statusbar.c
	* src/summary_search.c
	* src/summaryview.c
	* src/gtk/quicksearch.c
	* src/gtk/quicksearch.h
		Optimise searches by setting different
		refresh intervals (depending if the 
		search is fast or not)

2006-09-29 [colin]	2.5.2cvs21

	* src/codeconv.c
		Optimise by reusing the last iconv converter
		if possible
	* src/textview.c
		Optimise a bit (the foldable quotes feature
		still has an awful O(n^2) algo

2006-09-29 [colin]	2.5.2cvs20

	* src/gtk/gtksctree.c
	* src/gtk/gtksctree.h
		Optimise de-selection via up/down or
		another key

2006-09-28 [colin]	2.5.2cvs19
