@@ -1,3 +1,10 @@
+2006-10-01 [colin]	2.5.2cvs32
+
+	* src/mh.c
+	* src/msgcache.c
+		fflush() caches and mh_sequences before
+		fclose()ing
+
 2006-10-01 [colin]	2.5.2cvs31
 
 	* src/msgcache.c
